--- a/WebApi/WebApi/WebApi.csproj
+++ b/WebApi/WebApi/WebApi.csproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\CustomRegExConstraint.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -168,6 +169,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Miscellaneous\Constants.cs" />
     <Compile Include="Miscellaneous\XMLManager.cs" />
     <Compile Include="Models\Cat.cs" />
     <Compile Include="Models\Employee.cs" />
